<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>4.1.0</version>
		<relativePath/> <!-- lookup parent from repository -->
	</parent>
	<groupId>com.oficina</groupId>
	<artifactId>soat-tech-challenge</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<name/>
	<description/>
	<url/>
	<licenses>
		<license/>
	</licenses>
	<developers>
		<developer/>
	</developers>
	<scm>
		<connection/>
		<developerConnection/>
		<tag/>
		<url/>
	</scm>
	<properties>
		<java.version>21</java.version>
		<sonar.organization>seu-org</sonar.organization>
		<sonar.host.url>https://sonarcloud.io</sonar.host.url>
		<sonar.coverage.exclusions>
			com/oficina/SoatTechChallengeApplication.java,
			**/domain/ports/**/*.java,
			**/infrastructure/adapters/inbound/rest/dto/**/*.java,
			**/domain/model/*Status*.java,
			**/domain/model/*Perfil*.java,
			**/infrastructure/adapters/outbound/persistence/entity/**/*.java,
			**/infrastructure/adapters/outbound/persistence/mapper/**/*.java,
			**/infrastructure/config/**/*.java,
			**/common/infrastructure/rest/GlobalExceptionHandler.java,
			**/infrastructure/adapters/inbound/security/**/*.java,
			**/infrastructure/adapters/outbound/security/JwtTokenAdapter.java
		</sonar.coverage.exclusions>
	</properties>
	<dependencies>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-validation</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-webmvc</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-validation-test</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-webmvc-test</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-data-jpa</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-security</artifactId>
		</dependency>
		<dependency>
			<groupId>com.mysql</groupId>
			<artifactId>mysql-connector-j</artifactId>
			<scope>runtime</scope>
		</dependency>
		<dependency>
			<groupId>org.springdoc</groupId>
			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
			<version>2.8.14</version>
		</dependency>
		<dependency>
			<groupId>org.springframework.security</groupId>
			<artifactId>spring-security-test</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>com.h2database</groupId>
			<artifactId>h2</artifactId>
			<scope>test</scope>
		</dependency>
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
			</plugin>
			<plugin>
				<groupId>org.jacoco</groupId>
				<artifactId>jacoco-maven-plugin</artifactId>
				<version>0.8.12</version>
				<executions>
					<execution>
						<id>prepare-coverage-agent</id>
						<goals>
							<goal>prepare-agent</goal>
						</goals>
					</execution>
					<execution>
						<id>generate-coverage-report</id>
						<phase>test</phase>
						<goals>
							<goal>report</goal>
						</goals>
						<configuration>
							<excludes>

								<!--aplicacao-->
								<exclude>com/oficina/SoatTechChallengeApplication.class</exclude>
								<!--ports-->
								<exclude>**/domain/ports/**/*.class</exclude>
								<!--dtos-->
								<exclude>**/infrastructure/adapters/inbound/rest/dto/**/*.class</exclude>
								<!--enuns-->
								<exclude>**/domain/model/*Status*.class</exclude>
								<exclude>**/domain/model/*Perfil*.class</exclude>
								<!--entidades e mappers-->
								<exclude>**/infrastructure/adapters/outbound/persistence/entity/**/*.class</exclude>
								<exclude>**/infrastructure/adapters/outbound/persistence/mapper/**/*.class</exclude>
								<!--configs-->
								<exclude>**/infrastructure/config/**/*.class</exclude>
								<!--exceptions-->
								<exclude>**/common/infrastructure/rest/GlobalExceptionHandler.class</exclude>
								<!--seguranca-->
								<exclude>**/infrastructure/adapters/inbound/security/**/*.class</exclude>
								<exclude>**/infrastructure/adapters/outbound/security/JwtTokenAdapter.class</exclude>
							</excludes>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.sonarsource.scanner.maven</groupId>
				<artifactId>sonar-maven-plugin</artifactId>
				<version>5.0.0.4389</version>
			</plugin>
		</plugins>
	</build>

</project>
